# lab

./: .editorconfig  .gitignore  Makefile  Pipfile  README.md  environment.yml  package-lock.json  package.json  pyproject.toml  readme.md  requirements-lite.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml
files/: README.md  autograd.ipynb  california_housing.ipynb  cloudflare.ipynb  data.ipynb  draw.ipynb  eda.ipynb  functions.ipynb  iris.ipynb  monash.ipynb  neuralprophet.ipynb  plotly.ipynb  profiling.ipynb  sklearn.ipynb  sktime.ipynb  statsmodels.ipynb  sympy.ipynb  torch.ipynb  wandb.ipynb  widgets.ipynb  yellowbrick.ipynb
files/data/: diabetes.csv  diabetes.ipynb  hatch.ipynb  spy_vxx.ipynb  usps.ipynb
files/lib/: __init__.py  dataset_to_dataframe.py  describe_dataframe.py  load_keras_dataset.py  plot_keras_history.py  show_dataset_images.py
files/models/: __init__.py  alexnet.py  darknet19.py  lenet.py  resnet18.py  squeezenet.py  vgg.py
files/notes/: cnn.md  deep_learning.md  diffusion.md  gradio.md  tensorflow.md  transformer.md
files/tf/: autoencoder.ipynb  cifar.ipynb  keras_cv.ipynb  mnist.ipynb  rnn.ipynb  shakespeare.ipynb  stable_diffusion.ipynb  tensorboard.ipynb  vae.ipynb  xor.ipynb
files/torch/: iris.ipynb  neuralprophet.ipynb
files/voila/: draw.ipynb  xor.ipynb
notebooks/: ai.ipynb  node.ipynb  notebook.ipynb  python.ipynb  sql.ipynb
notebooks/data/: aapl.csv
