[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jupyter-codespace"
version = "0.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
bokeh = "*"
duckdb = "*"
jupysql = "*"
jupyter-ai = "*"
jupyterlab = "*"
jupyterlab-git = "*"
matplotlib = "*"
numpy = "*"
python = "^3.10"
openai = "*"
pandas = "*"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[tool.black]
line-length = 99
