[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "jupyter-codespace"
version = "0.0.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
bokeh = "^3.2.2"
duckdb = "^0.8.1"
duckdb-engine = "0.9.2"
ipykernel = "^6.25.2"
jupysql = "^0.10.1"
jupyter-ai = "^2.2.0"
jupyterlab = "^4.0.6"
jupyterlab-git = "^0.42.0"
matplotlib = "^3.8.0"
numpy = "^1.25.2"
openai = "^0.28.0"
pandas = "^2.1.0"
python = ">=3.10.8"
sqlalchemy = "2.0.20"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[tool.black]
line-length = 99
